# MPCNS_Beta

./: CMakeLists.txt
Z3_HallMHD/: 0_HallMHD_Solver_CalcResidual.cpp  0_HallMHD_Solver_ComputeTimestep.cpp  0_HallMHD_Solver_UpdateControl.cpp  0_MHD_Solver_rhs.cpp  0_MHD_Solver_rhs_inv.cpp  1_HallMHD_Solver_PrepareStep.cpp  2_HallMHD_Solver_RHS_Fluid.cpp  2_HallMHD_Solver_RHS_Fluid_Recon.cpp  2_HallMHD_Solver_RHS_Induction.cpp  2_HallMHD_Solver_TimeAdvacne.cpp  3_HallMHD_Solver_DerivedDiagnostic.cpp  4_HallMHD_Explicit.cpp  5_CTOperators.cpp  6_ImplicitHall_CurlEHall.cpp  Boundary.cpp  Boundary.h  CMakeLists.txt  CTOperators.h  Control.h  HallConfig.h  HallMHD_Solver.h  ImplicitHall_Solver.h  ImplicitHall_Solver_build.cpp  ImplicitHall_Solver_solver.cpp  Initial.h  MHD_Solver.h  Output.cpp  main.cpp
Z3_HallMHD/0000setup_example/: 1_Initial_condition.txt  2_Boundary_Condition.txt  3_MHD_Control.txt  filenames
Z3_HallMHD/include/: HallMHD_Solver.h
Z3_HallMHD/include/0_state/: SolverFields.h  StateTypes.h
Z3_HallMHD/include/1_boundary/: Boundary.h
Z3_HallMHD/include/3_io/: Dipole.h  Initial.h  Output.h
Z3_HallMHD/include/4_solver/: ImplicitHall_Solver.h
Z3_HallMHD/setup/: 0_General_Setting.txt
Z3_HallMHD/src/: HallMHD_Solver.cpp
Z3_HallMHD/src/1_boundary/: Boundary.cpp
Z3_HallMHD/src/2_operators/: CTOperators.cpp
Z3_HallMHD/src/3_io/: Output.cpp
Z3_HallMHD/src/4_solver/: 0_HallMHDSolver_driver.cpp  1_HallMHDSolver_prepare.cpp  2_HallMHDSolver_advance.cpp  3_HallMHDSolver_rhs_fluid.cpp  3_HallMHDSolver_rhs_induction.cpp  4_HallMHDSolver_hall_explicit.cpp  5_HallMHDSolver_hall_implicit.cpp  ImplicitHall_Solver_build.cpp  ImplicitHall_Solver_solver.cpp
Z3_HallMHD/src/physic/: HallMHDSolver_CalcConstants.cpp  HallMHDSolver_MaxRadius.cpp  HallMHDSolver_Reconstruction.cpp  HallMHD_Solver_Primitive.cpp
Z3_HallMHD/src/tools/: HallMHDSolver_diagnostics.cpp  HallMHDSolver_energy.cpp  (+1 more)
(+57 files in other folders)
